--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
+    "webpack": "^4.0.1",
+    "webpack-dev-server": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
