--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^1.0.3",
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
@@ -20,9 +21,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-transition-group": "^2.2.1",
-    "redux": "^3.7.2",
-    "webpack": "^4.0.1",
-    "webpack-dev-server": "^3.1.0"
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
